# core

./: .dockerignore  .env  .env.codespaces  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODESPACES.md  CONTRIBUTING.md  Dockerfile  Easy-Install_Ubuntu.sh  GROWTH.md  LICENSE  Makefile  PLUGIN_DEVX_RECAP.html  README.md  ROADMAP.md  V2_DEV_NOTES.md  compose.yml  docker-compose-full.yml  docker-compose.yml  kubernetes.yaml  mkdocs.yml  package-lock.json  plugin.json  pyproject.toml  requirements.txt  run.bat  run.sh  setup.cfg  test_upload.txt  update-cheshire-cat-linux.sh
core/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Makefile  install_plugin_dependencies.py  install_plugin_dependencies.sh  logger.yml  pyproject.toml  requirements.txt  shared_state.py
core/cat/: README.md  api_auth.py  env.py  headers.py  log.py  main.py  memory.py  rabbit_hole.py  startup.py  utils.py  welcome.txt
core/cat/agents/: __init__.py  agent_manager.py  base_agent.py  form_agent.py  main_agent.py  memory_agent.py  procedures_agent.py
core/cat/auth/: auth_utils.py  connection.py  headers.py  jwt.py  permissions.py  session_manager.py  utils.py
core/cat/brain_cat/: agent_manager.py  cheshire_cat.py
core/cat/cache/: array_cache.py  base_cache.py  cache_interface.py  cache_item.py  cache_manager.py  file_system_cache.py  in_memory_cache.py
core/cat/convo/: messages.py  model_interactions.py
core/cat/db/: crud.py  database.py  models.py
core/cat/db/database/: __init__.py  abstract.py  get_db.py  sql.py  tiny.py
core/cat/db/tables/: __init__.py  base.py  default.py
core/cat/db/utils/: __init__.py  cast.py  tables.py
core/cat/experimental/form/: __init__.py  cat_form.py  form_decorator.py  form_utils.py
core/cat/factory/: auth_handler.py  authorizator.py  custom_auth_handler.py  custom_authorizator.py  custom_embedder.py  custom_llm.py  dumb_embedder.py  embedder.py  llm.py  ollama_utils.py
core/cat/infrastructure/: package.py  zip.py
core/cat/looking_glass/: LayerTwo.py  OutFlow.py  agent_manager.py  callbacks.py  cheshire_cat.py  layer2_utilities.py  new_flow.py  output_parser.py  prompts.py  recall_settings.py  scheduler.py  session_cat.py  singleton.py  stray_cat.py  tags.py  telemetry.py  utils.py  white_rabbit.py  ws_logger.py
core/cat/mad_hatter/: cat_form.py  decorators.py  mad_hatter.py  plugin.py  plugin_extractor.py  registry.py  tweedledum.py
core/cat/mad_hatter/core_plugin/: form.py  plugin.json  plugin_events.py  settings.json  settings.py  tools.py
core/cat/mad_hatter/decorators/: __init__.py  endpoint.py  form_decorator.py  hook.py  plugin.py  plugin_decorator.py  tool.py
core/cat/memory/: collection_info.py  constants.py  long_term_memory.py  memory_point.py  vector_memory.py  vector_memory_collection.py  working_memory.py  working_memory_list.py
core/cat/memory/elasticsearch/: vector_memory.py  vector_memory_collection.py
core/cat/memory/qdrant/: vector_memory.py  vector_memory_collection.py
core/cat/memory_cat/: long_term_memory.py
core/cat/plugins/: how-to-write-a-plugin.md
core/cat/plugins/XLLent/: .gitignore  README.md  parsers.py  plugin.json  requirements.txt  xllent.py
core/cat/plugins/quickstart_cat_plugin/: models.py  plugin.json
core/cat/public/: index.html  main.css  settings.js  widget.css  widget.js
core/cat/routes/: auth.py  auth_handler.py  authorizator.py  base.py  chat.py  embedder.py  llm.py  memory.py  openapi.py  plugin.py  plugins.py  prompt.py  settings.py  types.py  upload.py  users.py  websocket.py
core/cat/routes/memory/: collections.py  convo_history.py  memory_router.py  points.py
core/cat/routes/services/: setting_utils.py  settings_service.py
core/cat/routes/setting/: embedder_setting.py  general_setting.py  llm_setting.py  prompt_setting.py  setting_utils.py
core/cat/routes/static/: admin.py  auth_static.py  public.py  static.py  templates.py
core/cat/routes/users/: users.py  users_manager.py
core/cat/routes/websocket/: websocket.py  websocket_manager.py
core/cat/static/: .gitignore
core/cat/tests/: test_utils.py
core/cat/validators/: llm.py
core/requirements/: test.in
core/tests/: conftest.py  test_cat_utils.py  test_env_variables.py  utils.py
core/tests/agent_manager/: agent_fixtures.py  test_agent_form.py  test_agent_manager.py  test_agent_memory.py  test_agent_tools.py  test_output_parser.py
core/tests/agents/: agent_fixtures.py  test_agent_form.py  test_agent_memory.py  test_agent_tools.py  test_main_agent.py  test_output_parser.py
core/tests/cache/: test_core_caches.py
core/tests/infrastructure/: test_package.py  test_zip.py
core/tests/looking_glass/: test_cheshire_cat.py  test_stray_cat.py  test_white_rabbit.py
core/tests/mad_hatter/: test_endpoints.py  test_hooks.py  test_mad_hatter.py  test_plugin.py  test_plugin_extractor.py
core/tests/memory/: test_class_working_memory.py
core/tests/mocks/: sample.json  sample.txt
core/tests/mocks/mock_plugin/: mock_endpoint.py  mock_form.py  mock_hook.py  mock_llm.py  mock_plugin_overrides.py  mock_tool.py
core/tests/routes/: test_api_key.py  test_custom_endpoints.py  test_minimax_integration.py  test_plugins.py  test_routes_base.py  test_routes_memory.py  test_routes_plugins.py  test_routes_rabbithole.py  test_routes_upload.py  test_session.py  test_websocket.py
core/tests/routes/auth/: test_auth_setting.py  test_available_permissions.py  test_custom_auth_handler.py  test_env_api_key.py  test_jwt.py
core/tests/routes/authorizator/: test_authorizator_setting.py
core/tests/routes/embedder/: test_embedder_minimax.py  test_embedder_setting.py
core/tests/routes/llm/: test_llm_minimax.py  test_llm_setting.py
core/tests/routes/memory/: test_memory_by_user.py  test_memory_collection.py  test_memory_points.py  test_memory_recall.py  test_working_memory.py
core/tests/routes/plugins/: fixture_just_installed_plugin.py  test_plugin_settings.py  test_plugin_toggle.py  test_plugins_info.py  test_plugins_install_uninstall.py  test_plugins_registry.py  test_plugins_upload.py
(+680 files in other folders)
