[project]
name = "cheshire-cat-ai"
description = "Production ready AI assistant framework"
version = "2.0.0"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Piero Savastano" },
    { name = "Cheshire Cat AI Contributors" },
]
dependencies = [
    "pydantic>=2.11.7",
    "uvicorn[standard]>=0.34.3",
    "fastapi[standard]>=0.115.14",
    "scalar-fastapi>=1.0.3",
    "websockets>=15.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.3",
    "pytz>=2025.2",
    "Jinja2>=3.1.4",
    "qdrant_client>=1.14.3",
    "langchain>=0.2.1",
    "langchain-community>=0.2.1",
    "langchain-ollama>=0.1.3",
    "langchain-openai>=0.1.7",
    "langchain-anthropic>=0.1.23",
    "langchain-google-genai>=1.0.8",
    "langchain-google-genai[images]",
    "langchain-cohere>=0.1.5",
    "huggingface-hub>=0.25.1",
    "beautifulsoup4>=4.12.3",
    "pdfminer.six>=20221105",
    "unstructured>=0.12.6",
    "tiktoken>=0.7.0",
    "tomli",
    "loguru>=0.7.2",
    "text_generation>=0.6.1",
    "tinydb>=4.8.0",
    "python-slugify>=8.0.1",
    "autopep8",
    "pylint",
    "perflint",
    "pylint-actions",
    "pytest",
    "pytest-asyncio",
    "httpx>=0.27.2",
    "fastembed>=0.3.6",
    "rapidfuzz>=3.6.1",
    "APScheduler>=3.10.4",
    "ruff>=0.4.7",
    "aiofiles>=24.1.0",
    "scikit-learn>=1.7.0",
]

[tool.uv]
package = true

[project.scripts]
# CLI
cat-up = "cat.main:main"

