[project]
name = "cheshire-cat-ai"
description = "Production ready AI agent framework"
version = "2.0.20"
requires-python = ">=3.11"
license-files = ["LICEN[CS]E*"]
license = "GPL-3.0"
readme = "README.md"
authors = [
    { name = "Piero Savastano" },
    { name = "Cheshire Cat AI Contributors" },
]
dependencies = [
    "pydantic>=2.12.4",
    "uvicorn[standard]>=0.38.0",
    "fastapi[standard]>=0.121.0",
    "PyJWT>=2.8.0",
    "piccolo[postgres,sqlite,orjson]>=1.30.0",
    "bcrypt>=4.1.3",
    "loguru>=0.7.2",
    "python-slugify>=8.0.1",
    "pytest",
    "pytest-asyncio",
    "ruff>=0.4.7",
    "aiofiles>=24.1.0",
    "fastmcp>=2.12.4",
    "asgi-lifespan>=2.1.0",
    "ag-ui-protocol>=0.1.13",
    "cachetools>=6.2.0",
    "httpx>=0.28.1",
    "openai>=2.42.0",
]
[project.urls]
Homepage = "https://github.com/cheshire-cat-ai/core"
Issues = "https://github.com/cheshire-cat-ai/core/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cat"]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Collect the core suite and every plugin suite in one run.
testpaths = ["tests", "plugins"]

[project.scripts]
# CLI
ccat = "cat.main:main"

[project.entry-points.pytest11]
# The shared test harness (fixtures + `with_plugins` marker), auto-activated for
# the core suite and every plugin suite whenever cheshire-cat-ai is installed.
cheshire_cat = "cat.testing"


