[project]
name = "Cheshire-Cat"
description = "Production ready AI assistant framework"
version = "1.7.1"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Piero Savastano" },
    { name = "Cheshire Cat AI Contributors" },
]
dependencies = [
    "gunicorn==23.0.0",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.17",
    "pydantic==2.9.2",
    "fastapi==0.115.4",
    "scalar-fastapi==1.0.3",
    "websockets==13.1",
    "PyJWT==2.8.0",
    "bcrypt==4.1.3",
    "Jinja2==3.1.4",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "qdrant-client==1.12.1",
    "langchain==0.3.7",
    "langchain-openai==0.2.6",
    "langchain-community==0.3.4",
    "langchain-anthropic==0.2.4",
    "langchain-google-genai==2.0.4",
    "langchain-cohere==0.3.1",
    "langchain-ollama==0.2.0",
    "huggingface-hub==0.26.2",
    "beautifulsoup4==4.12.3",
    "pdfminer.six==20240706",
    "unstructured==0.16.4",
    "tiktoken==0.8.0",
    "tomli==2.0.2",
    "loguru==0.7.2",
    "text_generation==0.7.0",
    "tinydb==4.8.0",
    "python-slugify==8.0.1",
    "autopep8==2.3.1",
    "pylint==3.3.1",
    "perflint==0.8.1",
    "pylint-actions==0.5.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "fastembed==0.4.1",
    "rapidfuzz==3.10.1",
    "APScheduler==3.10.4",
    "ruff==0.4.7",
    "aiofiles==24.1.0",
]

[tool.coverage.run]
source = ["cat"]

[tool.pylint]
max-line-length = 180
disable = [
    "C0301",
    "C0103",
    "C0114",
    "E0401",
    "C0115",
    "C0116",
    "E1101",
    "R0801",
    "C0202",
    "W0406",
    "W1514",
    "W0201",
    "W0511",
]

[tool.pylint.main]
load-plugins = "pylint_actions, perflint"
