[project]
name = "Cheshire-Cat"
description = "Production ready AI assistant framework"
version = "1.9.1"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Piero Savastano" },
    { name = "Cheshire Cat AI Contributors" },
]
dependencies = [
    "gunicorn==23.0.0",
    "uvicorn[standard]==0.34.3",
    "python-multipart==0.0.20",
    "pydantic==2.11.5",
    "fastapi==0.115.12",
    "scalar-fastapi==1.0.3",
    "websockets==15.0.1",
    "PyJWT==2.10.1",
    "bcrypt==4.3.0",
    "Jinja2==3.1.6",
    "pandas==2.3.0",
    "scikit-learn==1.6.1",
    "qdrant_client==1.14.2",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-ollama==0.3.3",
    "langchain-openai==0.3.19",
    "langchain-anthropic==0.3.15",
    "langchain-google-genai==2.1.5",
    "langchain-google-genai[images]",
    "langchain-cohere==0.4.4",
    "huggingface-hub==0.32.4",
    "beautifulsoup4==4.13.4",
    "pdfminer.six==20250506",
    "unstructured==0.17.2",
    "tiktoken==0.9.0",
    "tomli==2.2.1",
    "loguru==0.7.3",
    "text_generation==0.7.0",
    "tinydb==4.8.2",
    "python-slugify==8.0.4",
    "autopep8",
    "pylint",
    "perflint",
    "pylint-actions",
    "pytest",
    "pytest-asyncio",
    "httpx==0.28.1",
    "fastembed==0.7.0",
    "rapidfuzz==3.13.0",
    "APScheduler==3.11.0",
    "ruff==0.4.7",
    "aiofiles==24.1.0",
]

[tool.coverage.run]
source = ["cat"]

[tool.pylint]
max-line-length = 180
disable = [
    "C0301",
    "C0103",
    "C0114",
    "E0401",
    "C0115",
    "C0116",
    "E1101",
    "R0801",
    "C0202",
    "W0406",
    "W1514",
    "W0201",
    "W0511",
]

[tool.pylint.main]
load-plugins = "pylint_actions, perflint"
